--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
 		<!-- GOOGLE API -->
 		<script src="https://apis.google.com/js/api.js"></script>
 	</head>
-	<body>
+	<body style="background-image: url('./background.jpg');">
 		<noscript>You need to enable JavaScript to run this app.</noscript>
 		<div id="root"></div>
 		<!--
