--- a/public/index.html
+++ b/public/index.html
@@ -3,18 +3,30 @@
 	<head>
 		<meta charset="utf-8" />
 		<link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<meta
+			name="viewport"
+			content="width=device-width, initial-scale=1,
+    shrink-to-fit=no, maximum-scale=1,user-scalable=0"
+		/>
 		<meta name="theme-color" content="#000000" />
+		<meta content="website" property="og:type" />
+		<meta content="%PUBLIC_URL%/logo.png" property="og:image" />
+		<meta content="Movie Library" property="og:title" />
 		<meta
 			name="description"
-			content="Web site created using create-react-app"
+			content="A Movie Library where you can check all your favorite movies, as well as the cast of it, and so mucnh more! Made with ❤️ by Fidalgo"
+			property="og:description"
 		/>
-		<link rel="apple-touch-icon" href="logo192.png" />
+		<link rel="canonical" href="https://movies.fidalgo.dev" />
 		<!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
 		<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+		<link
+			href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700"
+			rel="stylesheet"
+		/>
 		<!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
